# pave

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: pave.rb
e2e/: add.test.ts  env.test.ts  help.test.ts  helpers.ts  list.test.ts  package-lock.json  package.json  remove.test.ts  search.test.ts  shell-integration.test.ts  tui-test.config.ts
src/: cli.rs  main.rs  path_store.rs
src/commands/: add.rs  env.rs  list.rs  mod.rs  remove.rs  search.rs
src/util/: mod.rs  path.rs  search.rs  shell.rs  ui.rs
