[package]
name = "pave"
version = "0.1.0"
edition = "2021"
description = "A cross-platform CLI tool for managing the PATH"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
dialoguer = "0.11"
dirs = "6"
anyhow = "1"
dunce = "1"
indicatif = "0.17"
console = "0.15"
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Environment"] }
